mothership and shield rendering now working, must fix flicker, collision now working. work on cannon movement and sprite anim

--- a/assets/stylesheets/mainpage.css
+++ b/assets/stylesheets/mainpage.css
@@ -1,23 +1,22 @@
 .content-container {
   border: 1px dashed black;
   background-image: url(../../assets/images/splash.jpg);
-  background-size: 720px 500px;
+  background-size: 760px 600px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  min-height: 500px;
+  min-height: 600px;
 }
 
 
 h1 {
   font-family: 'Press Start 2P';
-  color: magenta;
-  font-size: 40px;
-  width: 100%;
-  text-align: center;
-  margin-bottom: -30px;
-  margin-top: 10px;
+    font-size: 50px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: -36px;
+    margin-top: 30px;
    -webkit-animation:colorchange 25s infinite alternate;
 }
 
